[package]
name = "scanserv-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.0.11"
async-graphql-poem = "7.0.11"
async-stream = "0.3.6"
futures-channel = "0.3.31"
futures-timer = "3.0.3"
futures-util = "0.3.31"
once_cell = "1.20.2"
poem = "3.1.3"
slab = "0.4.9"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
