[package]
name = "scanserv-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.11", features = ["chrono"] }
async-graphql-poem = "7.0.11"
async-stream = "0.3.6"
futures-channel = "0.3.31"
futures-timer = "3.0.3"
futures-util = "0.3.31"
once_cell = "1.20.2"
poem = { version = "3.1.3", features = ["static-files"] }
slab = "0.4.9"
tokio = { version = "1.41.1", features = [
  "macros",
  "rt-multi-thread",
  "process",
] }
regex = "1.11.1"
duckdb = { version = "1.1.1", features = ["r2d2", "bundled", "chrono"] }
r2d2 = "0.8.10"
chrono = "0.4.38"
tempfile = "3.14.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
rand = "0.8.5"
async-trait = "0.1.79"
